Removing / from database name.